# Blitzkrieg

./: .gitignore  AILogic_ИСПРАВЛЕНИЯ.md  План работы.md
Sources/src/: BUILD.md  CMakeLists.txt  PROJECT_STRUCTURE.md  configure_x64.bat  configure_x86.bat  std_hash_compat.h
Sources/src/AILogic/: AAFeedBacks.cpp  AAFeedBacks.h  AICellsTiles.h  AIClassesID.h  AIConsts.cpp  AIEditorInternal.cpp  AIEditorInternal.h  AIEditorSerialize.cpp  AIGeometry.cpp  AIGeometry.h  AIGeometryDebug.cpp  AIHashFuncs.h  AIInternalConsts.h  AILogic.h  AILogic.vcproj  AILogicInternal.cpp  AILogicInternal.h  AILogicMissingTypes.h  AILogicObjectFactory.cpp  AILogicObjectFactory.h  AILogicSerialize.cpp  AILogicTypes.h  AIStaticMap.cpp  AIStaticMap.h  AIStaticMapSerialize.cpp  AITypes.h  AIUnit.cpp  AIUnit.h  AIUnitInfoForGeneral.cpp  AIUnitInfoForGeneral.h  AIUnitSerialize.cpp  AIWarFog.cpp  AIWarFog.h  AckManager.cpp  AckManager.h  AnimUnit.cpp  AnimUnit.h  AnimUnitMech.cpp  AnimUnitMech.h  AnimUnitSerialize.cpp  (+283 more)
Sources/src/Anim/: CMakeLists.txt  StdAfx.h
Sources/src/AutoRun/: AutoRunDialog.cpp  AutoRunDialog.h  CMakeLists.txt  StdAfx.h  StrProc.cpp  ZipFile.cpp
Sources/src/BugSlay/: AllocAndFillProcessModuleList.cpp  BugSlay.vcproj  BugSlayer.cpp  CMakeLists.txt  CallStack.cpp  CrashHandler.cpp  DialogFunctions.cpp  DialogFunctions.h  HookImportedFunctionByName.cpp  MemorySystem.cpp  StdAfx.h  build.bat
Sources/src/Common/: Actions.h  CMakeLists.txt  Common.vcproj  InterfaceScreenBase.cpp  MOBridge.cpp  MOBuilding.cpp  MOEntrenchment.cpp  MOObject.cpp  MOProjectile.cpp  MOSquad.cpp  MOUnit.cpp  MOUnitInfantry.cpp  MOUnitMechanical.cpp  MapObject.cpp  UISquadElement.cpp  WorldBase.cpp
Sources/src/ELK/: CMakeLists.txt  ELK.vcproj  ELK_StaticMethods.cpp  MainFrm.cpp  MainFrm.h  StdAfx.h
Sources/src/ELK_QT/: CMakeLists.txt  Configure_ru_RU.ts
Sources/src/FontGen/: CMakeLists.txt  FontGen.cpp  FontGen.h  FontGen.vcproj  StdAfx.h
Sources/src/Formats/: CMakeLists.txt  Formats.vcproj  StdAfx.h  fmtAIGeneral.cpp  fmtAnimation.cpp  fmtEffect.cpp  fmtMap.cpp  fmtMap.h  fmtSound.cpp  fmtSprite.cpp  fmtTerrain.cpp  fmtUnitCreation.h  fmtVSO.cpp
Sources/src/GFX/: CMakeLists.txt  Font.h  GFX.H  GFX.vcproj  GFXHelper.h  GraphicsEngine.cpp  Specific.h  StdAfx.h  Text.cpp
Sources/src/Game/: CMakeLists.txt  Game.vcproj  StdAfx.h  WinFrame.cpp  main.cpp
Sources/src/GameSpy/: CMakeLists.txt
Sources/src/GameTT/: AckManager.h  CMakeLists.txt  GameTT.vcproj  ListControlWrapper.h  MessageReactionINternal.h  MultiplayerCommandManager.h  StdAfx.h  TotalEncyclopedia.cpp  UIOptions.h  WorldClient.cpp
Sources/src/Image/: CMakeLists.txt  Image.vcproj
Sources/src/Input/: CMakeLists.txt  Input.vcproj  InputBinder.cpp  InputBinder.h
Sources/src/InterfaceSystemTest/: CMakeLists.txt  InterfaceSystemTest.vcproj  StdAfx.h
Sources/src/LuaLib/: CMakeLists.txt  Script.cpp
Sources/src/Main/: CMakeLists.txt  CommandsHistory.cpp  GameCreation.cpp  GamePlaying.cpp  Main.vcproj  MultiPlayerTransceiver.cpp  RPGStats.cpp  RPGStats.h  ScenarioTracker2Internal.cpp  ServersList.cpp  StdAfx.h  UserProfile.h
Sources/src/MapEditor/: CMakeLists.txt  MapEditor.vcproj  Specific.h  TemplateEditorFrame1.h
Sources/src/MapEditor_QT/: CMakeLists.txt  MapEditor_en_US.ts
Sources/src/Misc/: Basic.h  BasicObjectFactory.cpp  BasicObjectFactory.h  BasicShare.h  BitData.h  CMakeLists.txt  HPTimer.cpp  HashFuncs.h  Manipulator.cpp  Manipulator.h  StdAfx.h  StrProc.cpp  StrProc.h  Tools.h  TypeConvertor.h  VarSystemInternal.h  build_output.txt
Sources/src/Net/: CMakeLists.txt  Net.vcproj  NetA4.cpp  NetAcks.cpp  NetDriverConsts.cpp  NetLogin.cpp  NetPeer2Peer.cpp  NetServerInfo.cpp  NetStream.cpp  NetStream.h  build.bat
Sources/src/PlanePathTest/: CMakeLists.txt  PlanePathTest.vcproj  StdAfx.h
Sources/src/RandomMapGen/: CMakeLists.txt  MapInfo_CheckSums.cpp  MapInfo_Methods.cpp  MapInfo_StaticMethods.cpp  MapInfo_StaticMethods_RMGeneration.cpp  MiniMap_Methods.cpp  RMG_Methods.cpp  RMG_Types.h  RP_Methods.cpp  RandomMapGen.vcproj  Resource_Types.h  TerrainGenerator.h  VA_Methods.cpp  WV_Types.h
Sources/src/SFX/: CMakeLists.txt  SampleSounds.cpp  SampleSounds.h  SoundEngine.cpp  SoundEngine.h  SoundsSerialize.cpp  StdAfx.h
Sources/src/Scene/: BinkVideoPlayer.cpp  BinkVideoPlayer.h  BoldLineVisObj.h  Builders.h  CMakeLists.txt  CellsConglomerateContainer.h  Compat.h  Cursor.h  DepthOptimizer.h  DrawVisitor.h  EffectVisObj.h  FastSinCos.h  FlashVisObj.h  FrameSelection.h  GammaEffect.h  HashMapCompat.h  IconText.h  KeyBasedParticleSource.h  MaterialEffector.h  MatrixEffector.h  MeshVisObj.h  ObjVisObj.h  PFX.h  ParticleManager.h  ParticleSourceData.h  RiverBuilder.cpp  Scene.h  Scene.vcproj  SceneDraw.cpp  SceneInternal.h  SceneObjectFactory.cpp  SceneObjectFactory.h  SmokinParticleSource.h  SmokinParticleSourceData.h  SoundScene.h  SpriteVisObj.h  SquadVisObj.h  StatSystem.h  StdAfx.h  Terrain.h  (+7 more)
Sources/src/StreamIO/: BasicHash.h  CMakeLists.txt  CommonFileSystem.cpp  DBIO.h  DTHelper.h  DataBase.cpp  DataTableXML.cpp  DataTableXML.h  DataTreeXML.cpp  DataTreeXML.h  FileSystem.cpp  GlobalVars.h  Globals.h  MemFileSystem.cpp  ModFileSystem.cpp  OpenStorage.cpp  OptionSystemInternal.cpp  OptionSystemInternal.h  RandomGenInternal.cpp  SSHelper.h  SaveLoadSystem.cpp  SaveLoadSystem.h  Singleton.cpp  StreamIO.def  StreamIOHelper.h  StructureSaver.cpp  StructureSaver.h  StructureSaver2.cpp  StructureSaver2.h  StructureSaverInternal.h  ZipFile.cpp  ZipFileSystem.cpp  build_output.txt
Sources/src/StreamIOLib/: CMakeLists.txt
Sources/src/Tools/: CMakeLists.txt
Sources/src/UI/: CMakeLists.txt  UI.vcproj  UIBasic.cpp  UIBasic.h  UIColorTextScroll.cpp  UIComboBox.cpp  UIComplexScroll.cpp  UIConsole.cpp  UIEdit.cpp  UIInternal.cpp  UIInternalM.cpp  UIList.cpp  UIMedals.cpp  UIMessageBox.cpp  UIMiniMap.cpp  UINumberIndicator.cpp  UIObjectiveScreen.cpp  UIScreen.cpp  UIScrollText.cpp  UIShortcutBar.cpp  UISlider.cpp  UIStatusBar.cpp  UITimeCounter.cpp  UITree.cpp  UIVideoButton.cpp
Sources/src/a7exportmodel/: A7ExportModel.cpp  (+6 more)
(+60 files in other folders)
